# queemoji

./: .gitignore  .pre-commit-config.yaml  README.md
.github/: renovate.json5
.github/workflows/: build.yml  codeql.yml
assets/: README.md
scripts/: README.md  pyproject.toml  setup.py
scripts/queemoji_scripts/: __init__.py  __main__.py  _root_parser.py  _sub_parser.py  _utils.py  generate_pngs.py
