[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "queemoji-scripts"
version = "0.1.0"
description = "Various scripts to automate parts of the Queemoji project."
authors = [
    { name = "Nuztalgia" },
    { email = "nuztalgia@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Text Processing :: Markup",
    "Topic :: Utilities",
    "Typing :: Typed",
]
dynamic = ["dependencies", "urls"]

[project.scripts]
queemoji = "queemoji_scripts.__main__:main"
queemoji-scripts = "queemoji_scripts.__main__:main"

[tool.black]
target-version = ["py311"]

[tool.isort]
profile = "black"
classes = ["IO"]

[tool.pydocstyle]
convention = "google"
add-ignore = "D100"
